Add Even More Comments to Most of the Mod