@@ -23,12 +23,10 @@ import java.util.Map;
 
 public class OtherVRPlayerVisualizer extends Item {
 
-    private static final String DATA_KEY = "other_vr_player_data";
-
     // Usually, one would want to store this in the NBT/data components of the item. However, since
     // we're testing client functionality here, I'm just storing this in a map on the client. This
     // does lead to several bugs (data saved between worlds, all item stacks "holding" the same
-    // data, etc.) but we're just testing specific functionality, so I'm okay with that.
+    // data, etc.) but this is meant more as a demo than anything else.
     private static final Map<VRBodyPart, Vec3> bodyPartPositions = new EnumMap<>(VRBodyPart.class);
 
     public OtherVRPlayerVisualizer(Properties properties) {
@@ -37,19 +35,18 @@ public class OtherVRPlayerVisualizer extends Item {
 
     @Override
     public InteractionResult use(Level level, Player player, InteractionHand interactionHand) {
-        ItemStack itemStack = player.getItemInHand(interactionHand);
         // Item is meant to test getting other VR players from the client, so we run client-only
         if (player.level().isClientSide) {
             // Gets nearby players that aren't us that are in VR.
             List<Entity> nearbyPlayers = level.getEntities(player, AABB.ofSize(player.position(), 16, 16, 16),
                     e -> e instanceof Player p && VRAPI.instance().isVRPlayer(p));
-            // Bail early if none are found.
+            // Display a message and return if no such players exist.
             if (nearbyPlayers.isEmpty()) {
                 player.displayClientMessage(Component.translatable("item.mc_vr_playground.other_vr_player_visualizer.fail"), false);
                 return InteractionResult.FAIL;
             }
             // Get the first player found in the list. May not necessarily be the nearest, but that's okay.
-            Player target = (Player) nearbyPlayers.get(0);
+            Player target = (Player) nearbyPlayers.getFirst();
             // Get the pose of all body parts of the player.
             VRPose pose = VRAPI.instance().getVRPose(target);
             // pose is not null since the player was checked to be in VR, so this is safe.
